# WorkOutAPI

./: .gitignore  README.md
src/: alembic.ini  main.py  makefile  pyproject.toml
src/alembic/: alembic.ini  env.py
src/alembic/versions/: 10da55a0f426_.py  42aef6de3558_init_db.py  55b60e8a4cf2_db_init.py  8468f056a7bc_.py
src/api/: __init__.py  main.py  routers.py
src/api/atleta/: controller.py  models.py  schemas.py
src/api/categoria/: controller.py  models.py  schemas.py
src/api/centro_treinamento/: controller.py  models.py  schemas.py
src/api/configs/: database.py  settings.py
src/api/contrib/: dependencies.py
src/workoutapi/: __init__.py  main.py  routers.py
src/workoutapi/atleta/: controller.py  models.py  schemas.py
src/workoutapi/categoria/: controller.py  models.py  schemas.py
src/workoutapi/centro_treinamento/: controller.py  models.py  schemas.py
src/workoutapi/configs/: database.py  settings.py
src/workoutapi/contrib/: dependencies.py  models.py  schemas.py
